# Sub-Domain-lender

./: .env.example  .gitignore  main.py  pyproject.toml
app/auth/: __init__.py  user_auth.py
app/core/: __init__.py  create_dns_record.py  delete_dns_record.py
app/middleware/: __init__.py  login_middleware.py
app/models/: __init__.py  user_model.py
static/: script.js
templates/: about.html  base.html  dashboard.html  error.html  home.html  login.html  register.html  verify_email.html
utils/: __init__.py  email_sender.py  env_provider.py  get_user_records.py
